# drake-ocs2-mpc-example

./: .gitignore  CMakeLists.txt  README.md
lib/ocs2/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: utils.cpp
src/drake_framework_test/: CMakeLists.txt  drake_per_step_update_test.cpp  drake_system_events_test.cpp
src/mpc_cartpole/: CMakeLists.txt  cartpole_dynamics.h  cartpole_mpc_controller.cpp  cartpole_mpc_controller.h  cartpole_parameters.h  cartpole_user_command.cpp  cartpole_user_command.h  mpc_cartpole.cpp
src/mpc_cartpole/config/: task.info
src/mpc_cartpole/urdf/: cartpole.urdf
src/mpc_double_integrator/: CMakeLists.txt  double_integrator.urdf  double_integrator_mpc_controller.cpp  double_integrator_mpc_controller.h  double_integrator_user_command.cpp  double_integrator_user_command.h  mpc_controller.cpp  mpc_controller.h  mpc_double_integrator.cpp  task.info  user_command.cpp  user_command.h  utils.cpp  utils.h
src/mpc_double_integrator/config/: task.info
src/mpc_double_integrator/urdf/: target_ball.urdf
